<resources>
    <string name="app_name" translatable="false">Controle de Gastos</string>
    <string name="lipsum_text" translatable="false">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic type
    </string>

    <!--    transition names-->
    <string name="dashboard_to_add_transaction_transition_name" translatable="false">dashboard_to_add_transaction_shared_element</string>

    <!--    Add transactions fragment  -->
    <string name="add_transaction_toolbar_title">New transaction</string>
    <string name="add_transaction_text_hint_title">Title</string>
    <string name="add_transaction_text_hint_description">Description</string>
    <string name="add_transaction_text_hint_amount">Amount</string>
    <string name="add_transaction_fragment_label">New transaction</string>
    <string name="add_transaction_button_save">Save</string>
    <string name="closing_confirmation_dialog_title">Discard data?</string>
    <string name="closing_confirmation_dialog_message">All changes will be lost on exit.</string>
    <string name="closing_confirmation_dialog_positive_button">Discard</string>
    <string name="closing_confirmation_dialog_negative_button">Cancel</string>
    <string name="incomplete_fields_snackbar_message">There are incomplete fields</string>

    <!--  Transaction categories  -->
    <string name="category_food">Food</string>
    <string name="category_fastfood">Fastfood</string>
    <string name="category_transport">Transport</string>
    <string name="category_salary">Salary</string>
    <string name="category_several">Several</string>

    <!--  Transaction types  -->
    <string name="type_income">Income</string>
    <string name="type_expense">Expense</string>

    <!--  Dashboard Fragment -->
    <string name="dashboard_text_incomes">Income</string>
    <string name="dashboard_text_expenses">Expense</string>
    <string name="dashboard_text_balance_available">Balance available</string>
    <string name="dashboard_text_hint_searchbar">Search</string>
    <string name="dashboard_fragment_label">Dashboard</string>
    <string name="dashboard_recycler_transactions_header">Income and expense history</string>
    <string name="toolbar_selection_title">%1$s selected items</string>

    <!--  Select Date Dialog Fragment  -->
    <string name="select_date_dialog_fragment_close_button">Close</string>
    <string name="select_date_dialog_fragment_current_date_button">Current date</string>

    <!--  Transaction History Fragment  -->
    <string name="transaction_history_fragment_label">Transaction History</string>
    <string name="transactions_deletion_confirmation_dialog_title">Delete transactions?</string>
    <string name="transactions_deletion_confirmation_dialog_message">All selected transactions will be deleted.</string>
    <string name="transactions_deletion_confirmation_dialog_positive_button">Delete</string>
    <string name="transactions_deletion_confirmation_dialog_negative_button">Cancel</string>

</resources>